feat: Spring Boot + React JWT 로그인 프로젝트 초기 세팅
- 백엔드: JwtTokenManager, JwtAuthenticationFilter, JwtVerificationFilter, SecurityConfig 구성
- 프론트: React + Vite + react-router-dom 설치
- 라우터: Header, Footer, MemberLogin (useRef + useLocation + fetch /member/login)
- .env 민감정보 gitignore 처리 / .env.example 추가